<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageExos2">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifJumpJac"
        android:layout_width="352dp"
        android:layout_height="125dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="548dp"
        android:src="@drawable/sautpiedjoints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonQuitter"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:text="Fermer"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/buttonPrevListe"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:text="Précédent"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <pl.droidsonroids.gif.GifImageView

        android:layout_width="352dp"
        android:layout_height="125dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="348dp"
        android:src="@drawable/squatsaute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <pl.droidsonroids.gif.GifImageView

        android:layout_width="357dp"
        android:layout_height="131dp"
        android:layout_marginBottom="144dp"
        android:src="@drawable/soulpoids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="72dp"
        android:text="@string/info_sautjoints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifJumpJac"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text"
        android:layout_width="357dp"
        android:layout_height="72dp"
        android:text="@string/info_squatsaute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifJumpJac"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:layout_width="357dp"
        android:layout_height="72dp"
        android:text="@string/info_soulpoids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifJumpJac"
        app:layout_constraintVertical_bias="0.848" />


</androidx.constraintlayout.widget.ConstraintLayout>